RESOLVED FIXED61357
JSAudioContextCustom doesn't encode errors
https://bugs.webkit.org/show_bug.cgi?id=61357
Summary JSAudioContextCustom doesn't encode errors
Philippe Normand
Reported 2011-05-24 04:16:40 PDT
patch incoming about this
Attachments
Fix AudioContext return values (3.69 KB, patch)
2011-05-24 04:17 PDT, Philippe Normand
kling: review-
Fix AudioContext return values (3.61 KB, patch)
2011-05-24 10:05 PDT, Philippe Normand
kling: review+
Philippe Normand
Comment 1 2011-05-24 04:17:59 PDT
Created attachment 94593 [details] Fix AudioContext return values
Andreas Kling
Comment 2 2011-05-24 06:12:30 PDT
Comment on attachment 94593 [details] Fix AudioContext return values Nice catch, but you should change the throwError() calls to throwVMError() instead.
Philippe Normand
Comment 3 2011-05-24 10:05:06 PDT
Created attachment 94632 [details] Fix AudioContext return values
Andreas Kling
Comment 4 2011-05-24 10:09:11 PDT
Comment on attachment 94632 [details] Fix AudioContext return values r=me
Philippe Normand
Comment 5 2011-05-24 10:12:54 PDT
Note You need to log in before you can comment on or make changes to this bug.