2011-05-24  Philippe Normand  <pnormand@igalia.com>

Reviewed by Andres Kling.

        JSAudioContextCustom doesn't encode errors
        https://bugs.webkit.org/show_bug.cgi?id=61357

        Fix AudioContext return values

        * bindings/js/JSAudioContextCustom.cpp:
        (WebCore::JSAudioContextConstructor::constructJSAudioContext):

Canonical link: https://commits.webkit.org/76743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87163 268f45cc-cd09-0410-ab3c-d52691b4dbfc